--- a/src/app/dependency-table-row/dependency-table-row.component.html
+++ b/src/app/dependency-table-row/dependency-table-row.component.html
@@ -1,5 +1,5 @@
 
     <td>{{index}}</td>
-    <td *ngFor="let d of grow">{{d}}</td>
+    <td *ngFor="let number of dependencies">{{number}}</td>
 
 
